--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -209,7 +209,8 @@ table, th, td {
   text-decoration:none;
   text-shadow:0px 1px 0px #810e05;
   margin-bottom: 3px;
-  margin-top: 3px; 
+  margin-top: 3px;
+  text-align: center;
 }
 .myButton:hover {
   background-color:#c62d1f;
