--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -391,31 +391,33 @@
   {% endif %}
 
   <hr>
-  <a class="myButton"
-   data-toggle="tooltip" data-html="true" animation="true" title="Acessa a poposta do projeto"
-   href="{% url 'proposta_completa' projeto.proposta.id %}">Proposta</a>
+  <div style="max-width: 56em; text-align: center;">
 
-  <a class="myButton"
-   data-toggle="tooltip" data-html="true" animation="true" title="Acessa as avaliações das bancas"
-   href="{% url 'conceitos_obtidos' projeto.id %}">Avaliações</a>
+    <a class="myButton" style="width: 11em;"
+    data-toggle="tooltip" data-html="true" animation="true" title="Acessa a poposta do projeto"
+    href="{% url 'proposta_completa' projeto.proposta.id %}">Proposta</a>
 
-  <a class="myButton"
-   data-toggle="tooltip" data-html="true" animation="true" title="Acessa os agendamentos das bancas"
-   href="{% url 'bancas_lista' projeto.id %}">Agendamentos</a>
+    <a class="myButton" style="width: 11em;"
+    data-toggle="tooltip" data-html="true" animation="true" title="Acessa as avaliações das bancas"
+    href="{% url 'conceitos_obtidos' projeto.id %}">Avaliações</a>
 
-  <a class="myButton"
-   data-toggle="tooltip" data-html="true" animation="true" title="Acessa a versão avançada desse projeto"
-    {% if projetos_avancados %}
-      href="{% url 'projeto_avancado' projeto.id %}"
-    {% else %}
-      onclick="cria_avancado()" style="color:white;"
-    {% endif %}
-   >Avançado</a>
-  
-  <a class="myButton"
-   data-toggle="tooltip" data-html="true" animation="true" title="Permite editar alguns campos do projeto"
-   href="{% url 'editar_projeto' projeto.id %}">Editar</a>
-  
+    <a class="myButton" style="width: 11em;"
+    data-toggle="tooltip" data-html="true" animation="true" title="Acessa os agendamentos das bancas"
+    href="{% url 'bancas_lista' projeto.id %}">Agendamentos</a>
+
+    <a class="myButton" 
+    data-toggle="tooltip" data-html="true" animation="true" title="Acessa a versão avançada desse projeto"
+      {% if projetos_avancados %}
+        href="{% url 'projeto_avancado' projeto.id %}" style="width: 11em;"
+      {% else %}
+        onclick="cria_avancado()" style="color:white; width: 11em;"
+      {% endif %}
+    >Avançado</a>
+    
+    <a class="myButton" style="width: 11em;"
+    data-toggle="tooltip" data-html="true" animation="true" title="Permite editar alguns campos do projeto"
+    href="{% url 'editar_projeto' projeto.id %}">Editar</a>
+  </div>
   <p>&nbsp;</p>
 
   {% if not projetos_avancados %}
