--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -40,6 +40,21 @@
     
     }
 
+    .sem_propostas {
+      border: thin dotted #333333;
+      background-color: #E0E0E0;
+      width: 100%;
+      padding-top: 2px;
+      padding-bottom: 2px;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+  
+  }
+
     .etiqueta_proposta {
         font-size: 1.12em;
         color: black;
@@ -102,6 +117,19 @@
 
   {% if propostas %}
 
+    {% comment %} Estudantes sem escolhas de propostas de projetos{% endcomment %}
+    <div id="sem_proposta" style="display:none;">
+      <div id="proposta_vazia" class="sem_propostas" data-propostaid="-1" data-titulo="Estudantes sem escolhas de propostas de projetos" >
+        <div id="titulo-1" class="etiqueta_proposta">
+          <a target="_blank" rel="noopener noreferrer" class="ancora tip" data-tip="tip-1" style="color: #000062;">
+            <span class="titulo_proposta">Estudantes sem escolhas de propostas de projetos</span>
+          </a>&nbsp;
+          <a class="ancora" style="color: darkblue;"></a>
+        </div>
+      </div>
+      <br><br>
+    </div>
+
     {% for proposta in propostas %}   
 
     <div style="width: 100%; border-collapse:separate;">
@@ -154,7 +182,7 @@
                   {% endfor %}
                 </div>
             
-            {{proposta.titulo}}
+            <span class="titulo_proposta">{{proposta.titulo}}</span>
             </a>&nbsp;
 
             {% if proposta.organizacao and proposta.organizacao.nome %}
@@ -246,14 +274,14 @@
                 $(propostas[i]).parent().hide();
               }
           } else if(qtd_estudantes > 4 || qtd_estudantes < 3) {
-              // DESBAL
+              // Desbalanceadas
               if($('#desbalanceada').is(":checked")) {
                 $(propostas[i]).parent().show();
               } else {
                 $(propostas[i]).parent().hide();
               }
           } else {
-              // BALL
+              // Balanceadas
               if($('#balanceada').is(":checked")) {
                 $(propostas[i]).parent().show();
               } else {
@@ -297,11 +325,7 @@
     nao_definido = 0;
 
     {% for estudante, opcoes in estudantes_opcoes %}
-      {% if estudante.pre_alocacao %}
-        $("#proposta{{estudante.pre_alocacao.id}}").append(`
-      {% else %}
-        $("#proposta{{opcoes.0.proposta.id}}").append(`
-      {% endif %}
+      tmp_node = `
       <div id="estudante{{estudante.id}}" draggable="true" class="estudante" data-cr="{{estudante.cr}}"
       data-prioridades="[{% for opcao in opcoes %}{{opcao.proposta.id}}{%if not forloop.last%},{%endif%}{% endfor %}]">
       <a target="_blank" rel="noopener noreferrer" 
@@ -328,16 +352,35 @@
         {{estudante.familia|linebreaks}}<br>
         ">
         <span id="nome{{estudante.id}}">{{estudante.user.get_full_name}}</span></a>
-        <span class="opcao" style="float: right;">opção #<span>1</span></span><br>
+        <span class="opcao" style="float: right;">opção #<span>{% if opcoes %}1{% else %}?{% endif %}</span></span><br>
       [{{estudante.curso2.sigla_curta}}]&nbsp;&nbsp;&nbsp;CR:&nbsp;{{estudante.cr}}
       </div>
-      `);
+      `
+      
+      {% if estudante.pre_alocacao %}
+        if($("#proposta{{estudante.pre_alocacao.id}}").length == 0) { // proposta nao existe
+          $("#proposta_vazia").append(tmp_node);
+          $("#sem_proposta").show();
+        } else {
+          $("#proposta{{estudante.pre_alocacao.id}}").append(tmp_node);
+        }
+      {% else %}
+        {% if not opcoes %} {% comment %} Ligar aba de estudantes sem propostas {% endcomment %}
+          $("#sem_proposta").show();
+        {% endif %}
+        if($("#proposta{{opcoes.0.proposta.id}}").length == 0) { // proposta nao existe
+          $("#proposta_vazia").append(tmp_node);
+          $("#sem_proposta").show();
+        } else {
+          $("#proposta{{opcoes.0.proposta.id}}").append(tmp_node);
+        }
+      {% endif %}
+
       {% if estudante.pre_alocacao %}
         
         opcao = cor_estudante($("#estudante{{estudante.id}}"), {{estudante.pre_alocacao.id}})
 
         // Para o gráfico
-
         if(opcao[1] == "X") nao_definido += 1;
         else if(opcao[1] == 1) prioridade1 += 1;
         else if(opcao[1] == 2) prioridade2 += 1;
@@ -347,9 +390,7 @@
         else prioridade6m += 1;
 
         proposta = $("#proposta{{estudante.pre_alocacao.id}}").data('titulo');
-        //proposta = "XXXXXX";
         $(".atual{{estudante.id}}").html(proposta);
-        //update_tips();
 
       {% else %}
         // Se não pre alocado, vai para opcao 1.
@@ -376,11 +417,9 @@
         });
       }
     
+      var $draggedItem;
 
-    /* ------- */
-    var $draggedItem;
-
-    $(document).ready(function() {
+      $(document).ready(function() {
         $('.estudante').on('dragstart', dragging);
         $('.estudante').on('dragend', draggingEnded);
         $('.proposta').on('dragenter', preventDefault);
@@ -395,7 +434,6 @@
         });
 
         mostra_grafico();
-
         update_tips();
 
     });
@@ -467,9 +505,6 @@
         observer_proposta.observe(propostas[i], config);
     }
 
-    // observer_proposta.disconnect();
-
-
     function send_update(estudante, proposta) {
       $.ajax({
         url: '{% url "pre_alocar_estudante" %}',
@@ -507,12 +542,14 @@
         var target = $(e.target);
         var final_target = null;
 
-        if (target.attr('class')=="proposta") {
+        if (target.hasClass("proposta")) {
           final_target = target;
-        } else if (target.attr('class')=="etiqueta_proposta" || target.attr('class')=="estudante" ) {
+        } else if (target.hasClass("etiqueta_proposta") || target.hasClass("estudante") ) {
           final_target = target.parent();
-        } else if (target.attr('class')=="ancora") {
+        } else if (target.hasClass("ancora")) {
           final_target = target.parent().parent();
+        } else if (target.hasClass("titulo_proposta")) {
+          final_target = target.parent().parent().parent();
         }
         
         if(final_target != null) {
@@ -551,17 +588,27 @@
             prioridade6m,
           ];
 
+          var diff = (count_alunos - nao_definido)*0.01;
+          if(diff == 0) {diff=1.0;} // Evita divisão por zero
+
           labels = [
-            '#1 ['+parseInt(100*prioridade1/(count_alunos-nao_definido))+'%]',
-            '#2 ['+parseInt(100*prioridade2/(count_alunos-nao_definido))+'%]',
-            '#3 ['+parseInt(100*prioridade3/(count_alunos-nao_definido))+'%]',
-            '#4 ['+parseInt(100*prioridade4/(count_alunos-nao_definido))+'%]',
-            '#5 ['+parseInt(100*prioridade5/(count_alunos-nao_definido))+'%]',
-            '#>=6 ['+parseInt(100*prioridade6m/(count_alunos-nao_definido))+'%]',
+            '#1 ['+parseInt(prioridade1/diff)+'%]',
+            '#2 ['+parseInt(prioridade2/diff)+'%]',
+            '#3 ['+parseInt(prioridade3/diff)+'%]',
+            '#4 ['+parseInt(prioridade4/diff)+'%]',
+            '#5 ['+parseInt(prioridade5/diff)+'%]',
+            '#>=6 ['+parseInt(prioridade6m/diff)+'%]'
           ]
 
           window.myPie.data.datasets[0].data = dados;
-          window.myPie.data.datasets[0].labels = labels;
+          window.myPie.data.labels = labels;
+          
+          if(count_alunos <= nao_definido){
+            texto_a_ser_exibido = "Sem estudantes com opções válidas!";
+          } else{
+            texto_a_ser_exibido = "";
+          }
+          
           window.myPie.update();
 
           atual = "atual" + $draggedItem[0].id.slice(9)
