--- a/projetos/templates/projetos/projetos_vs_propostas.html
+++ b/projetos/templates/projetos/projetos_vs_propostas.html
@@ -57,11 +57,11 @@
                 {% if lingua == "pt" %}
                     <p>Recebemos propostas de <b>{{total_org_propostas}}</b> organizações distintas.</p>
                     <p>Realizados projetos com <b>{{total_org_projetos}}</b> organizações distintas.</p>
-                    <p>Dados de prospecção até 2019.2 estão incompletos.</p>
+                    <br><p>Obs: Dados de prospecção até 2019.2 estão incompletos.</p>
                 {% else %}
                     <p>Proposals received from <b>{{total_org_propostas}}</b> differente organizations.</p>
                     <p>Projects carried out from  <b>{{total_org_projetos}}</b> different organizations.</p>
-                    <p>Information about prospection until 2019.2 is incomplete.</p>
+                    <br><p>Obs: Information about prospection until 2019.2 is incomplete.</p>
                 {% endif %}
 
                 
