--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -16,11 +16,13 @@
   
   <style>
 
-    @media (max-width: 800px) {
-      .ancora {
-        font-size: 0.7em;
-      }
+    .opt_short {
+      display: none;
     }
+    .opt_full {
+      display: inline;
+    }
+    
     
     body {
       line-height: normal;
@@ -29,6 +31,7 @@
     .proposta {
         border: solid;
         width: 100%;
+        max-width: 100vw;
         padding-top: 2px;
         padding-bottom: 2px;
         display: -ms-flexbox;
@@ -37,7 +40,7 @@
             flex-wrap: wrap;
         -ms-flex-pack: distribute;
             justify-content: space-around;
-    
+        border-radius: 3px;
     }
 
     .sem_propostas {
@@ -52,13 +55,14 @@
           flex-wrap: wrap;
       -ms-flex-pack: distribute;
           justify-content: space-around;
-  
+          border-radius: 3px;
   }
 
     .etiqueta_proposta {
         font-size: 1.12em;
         color: black;
         width: 99%;
+        max-width: 99%;
         text-align: left;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -69,22 +73,22 @@
     .estudante {
         font-size: 12px;
         font-family: Arial, Helvetica, sans-serif;
-        padding-left: 3px;
-        width: 24%;
-        height: 34px;
+        padding: 2px;
+        width: 24rem;
+        height: 36px;
         background-color: #F0F0F0;
         border: 2px blue solid;
         color: #000;
         text-align: left;
         -webkit-user-select: none;
         -moz-user-select: none;
-            -ms-user-select: none;
-                user-select: none;
+        -ms-user-select: none;
+        user-select: none;
         margin-bottom: 2px;
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
-
+        border-radius: 5px;
     }
 
     .dragging {
@@ -101,7 +105,40 @@
       height:auto;
       width:auto;
     }
+
+    .l_curso {
+      padding-right: 2px;
+      padding-left: 2px;
+      background-color: #555555;
+      color: #FFFFFF;
+    }
     
+    @media (max-width: 800px) {
+      .ancora {
+        font-size: 0.7em;
+      }
+      .estudante {
+        width: 14.5rem;
+      }
+      .opt_short {
+        display: inline;
+      }
+      .opt_full {
+        display: none;
+      }
+      .container-fluid {
+        padding-right: 8px;padding-left: 8px;
+      }
+      
+    }
+
+    @media (max-width: 600px) {
+      .estudante {
+        width: 8rem;
+      }
+    }
+
+
   </style>
 
 {% endblock %}
@@ -149,7 +186,7 @@
 
           <div id="titulo{{proposta.id}}" class="etiqueta_proposta">
 
-            <a target="_blank" rel="noopener noreferrer" class="ancora tip" data-tip="tip{{proposta.id}}" href="{% url 'proposta_completa' proposta.id %}" style="color: #000062;">
+            <a target="_blank" rel="noopener noreferrer" class="ancora tip" data-tip="tip{{proposta.id}}" href="{% url 'proposta_completa' proposta.id %}" style="font-weight: 500; color: #000062;">
             <div id="tip{{proposta.id}}" hidden="hidden">
                   {% for opcaop in proposta.opcao_set.all %}
                     {% with alocacoes=opcaop.aluno.alocacao_set %}
@@ -183,14 +220,14 @@
                 </div>
             
             <span class="titulo_proposta">{{proposta.titulo}}</span>
-            </a>&nbsp;
-
+            </a>
+            <p>&nbsp;</p>
             {% if proposta.organizacao and proposta.organizacao.nome %}
-              <a class="ancora" href="{% url 'organizacao_completo' proposta.organizacao.id %}" style="color: darkblue;">
-                ({{ proposta.organizacao.nome }})
+              <a class="ancora" href="{% url 'organizacao_completo' proposta.organizacao.id %}" style="font-weight: bold; color: darkblue; margin-left: auto; text-align: center; min-width: 21%;">  
+                {{ proposta.organizacao.nome }}
               </a>
             {% elif proposta.nome_organizacao %}
-              <a  class="ancora" style="color: darkblue;">({{ proposta.nome_organizacao }})</a>
+              <a  class="ancora" style="color: darkblue;">{{ proposta.nome_organizacao }}</a>
             {% else %}
               PROBLEMA EM RECUPERAR ORGANIZAÇÃO DA PROPOSTA
             {% endif %}
@@ -295,7 +332,7 @@
     function cor_estudante(estudante, proposta) {
       prioridades = estudante.data("prioridades")
       var opcao = "X";
-      estudante.css("background-color", "#FF7090");
+      estudante.css("background-color", "#FF90B0");
       if (prioridades !== undefined) {
         for (var i = 0; i < prioridades.length; ++i) {
           if(prioridades[i]==proposta) {
@@ -334,12 +371,10 @@
         title="
         {% for opcao in opcoes %}
           <b>#{{ opcao.prioridade }} :</b>
-          {{opcao.proposta.titulo}}
-          ({{opcao.proposta.organizacao.nome}})
-          |{% mede_aderencia estudante opcao.proposta %}%|
-          <br>
+          {{opcao.proposta.titulo}} ({{opcao.proposta.organizacao.nome}})
+          |{% mede_aderencia estudante opcao.proposta %}%|<br>
         {% empty %}
-          Estudante não escolheu opções de proposta de projetos
+          Estudante não escolheu opções de proposta de projetos<br>
         {% endfor %}
         --------------------------------------------------------------------------<br>
         <b>Você já trabalhou/trabalha ou estagiou/estagia em alguma empresa de engenharia?</b><br>
@@ -352,8 +387,8 @@
         {{estudante.familia|linebreaks}}<br>
         ">
         <span id="nome{{estudante.id}}">{{estudante.user.get_full_name}}</span></a>
-        <span class="opcao" style="float: right;">opção #<span>{% if opcoes %}1{% else %}?{% endif %}</span></span><br>
-      [{{estudante.curso2.sigla_curta}}]&nbsp;&nbsp;&nbsp;CR:&nbsp;{{estudante.cr}}
+        <span class="opcao" style="float: right;"><div class="opt_full">opção </div><div class="opt_short">op</div>#<span>{% if opcoes %}1{% else %}?{% endif %}</span></span><br>
+        <span class="l_curso">{{estudante.curso2.sigla_curta}}</span>&nbsp;<span class="opt_full">CR: </span><span class="opt_short"></span>{{estudante.cr|floatformat:2}}
       </div>
       `
       
