--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -436,7 +436,7 @@
                   {% for aula in aulas|dictsort:"endDate" %}
                     <tr class="lin_aulas ano{{aula.endDate.year}} semestre" data-mes="{{aula.endDate.month}}"
                         {% if aula.startDate|dif_dias_hoje == 0 %}style="background-color: #F0FFFF;"{% endif %}>
-                        <th class="colu" scope="row">{{aula.endDate|date:"d/m/Y"}}</th>
+                        <th class="colu" scope="row">{{aula.endDate|date:"d/m/y"}}</th>
                         <td class="colu">{{aula.observacao}}</td><td class="colu">{{aula.location}}</td>
                     </tr>
                   {% endfor %}
