--- a/templates/organizacao-modal.html
+++ b/templates/organizacao-modal.html
@@ -57,15 +57,18 @@
 
               $('#organizacao_nome').html(response.organizacao);  // Para organizacao completo
 
-              href = "../../organizacoes/organizacao_completo/"+response.organizacao_id
+              href = "../../organizacoes/organizacao_completo/"+response.organizacao_id;
               novo = "<a href='"+href+"'>"+response.organizacao+"</a>";
               $('#proposta'+response.proposta).html(novo);  // Só para tabela
               $('#organizacao_link').html(response.organizacao);  // Para organizacao completo
-              $('#organizacao_link').attr("href", href) // Para organizacao completo
+              $('#organizacao_link').attr("href", href); // Para organizacao completo
               $('#organizacao_endereco').html(response.organizacao_endereco);  // Para organizacao completo
 
-              $('#organizacao_website').html(response.organizacao_website) // Para organizacao completo
-              $('#organizacao_website').attr("href", response.organizacao_website) // Para organizacao completo
+              $('#organizacao_website').html(response.organizacao_website); // Para organizacao completo
+              $('#organizacao_website').attr("href", response.organizacao_website); // Para organizacao completo
+
+              $("#logotipo").attr("src", response.organizacao_logotipo_url);
+              $("#logotipo").attr("alt", response.organizacao_sigla);
 
               $('.pulsar').css("animation-play-state", "paused"); // Stop pulsar animation
 
