removendo logs perdidos

--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -611,14 +611,16 @@
         dataType: 'json',
         success: function (data) {
           if (data.atualizado) {
-            console.log("Evento removido.");
+            //console.log("Evento removido.");
+          } else {
+            console.log("Erro: Evento não removido.");
           }
         },
         error: function (request, status, error) {
           {% if user.tipo_de_usuario == 4 %} 
             alert(request.responseText);
             jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-            console.log('error'+request.responseText);
+            console.log("error"+request.responseText);
           {% else %}
             jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
           {% endif %}
