--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -234,7 +234,9 @@
         dataType: 'json',
         success: function (data) {
           if (data.atualizado) {
-            console.log("Valor atualizado.");
+            //console.log("Valor atualizado.");
+          } else {
+            console.log("Erro: Valor não atualizado.");
           }
         },
         error: function (request, status, error) {
