--- a/templates/acompanhamento-modal.html
+++ b/templates/acompanhamento-modal.html
@@ -61,13 +61,13 @@
         },
         success: function(response){
             if (response.atualizado) {
-              console.log("Valor atualizado.");
+              //console.log("Valor atualizado.");
 
               linha_nova = "<tr><td>"+response.autor+"</td><td>"+response.org+"</td><td>"+response.data+"</td><td>"+texto+"</td></tr>";
               $('#AcompanhamentoTable tr:first').after(linha_nova);
 
             } else {
-              console.log("Valor não atualizado.");
+              console.log("Erro: Valor não atualizado.");
             }
             
         },
