--- a/organizacoes/templates/organizacoes/documento_view.html
+++ b/organizacoes/templates/organizacoes/documento_view.html
@@ -38,18 +38,19 @@
     {% else %}<br>
     {% endif %}
     <br>
-
-    {% comment %} TESTAR ISSO
-    <script>
-      var size = {{configuracao.maxMB_filesize}}*1048576;
-      const uploadField = document.getElementById("arquivo");
-      uploadField.onchange = function() {
-          if(this.files && this.files[0] && this.files[0].size > size){
-            alert("Tamanho do arquivo maior que o permitido de {{configuracao.maxMB_filesize}}Mb");
-            this.value = "";
-          }
-      }
-    </script> {% endcomment %}
+    
+    {% if configuracao.maxMB_filesize %}
+      <script>
+        var size = {{configuracao.maxMB_filesize}}*1048576;
+        const uploadField = document.getElementById("arquivo");
+        uploadField.onchange = function() {
+            if(this.files && this.files[0] && this.files[0].size > size){
+              alert("Tamanho do arquivo maior que o permitido de {{configuracao.maxMB_filesize}}Mb");
+              this.value = "";
+            }
+        }
+      </script>
+    {% endif %}
     
     <label for="link">Link:</label> <input required type="text" style="max-width:100%;display:block" size="73" maxlength="73" id="link" name="link" placeholder="https://"><br>
     <br>
