--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -152,16 +152,18 @@
             {% endif %}
             <br><br>
 
-            <script>
-              var size = {{configuracao.maxMB_filesize}}*1048576;
-              const uploadField = document.getElementById("arquivo");
-              uploadField.onchange = function() {
-                  if(this.files && this.files[0] && this.files[0].size > size){
-                    alert("Tamanho do arquivo maior que o permitido de {{configuracao.maxMB_filesize}}Mb");
-                    this.value = "";
-                  }
-              }
-            </script>
+            {% if configuracao.maxMB_filesize %}
+              <script>
+                var size = {{configuracao.maxMB_filesize}}*1048576;
+                const uploadField = document.getElementById("arquivo");
+                uploadField.onchange = function() {
+                    if(this.files && this.files[0] && this.files[0].size > size){
+                      alert("Tamanho do arquivo maior que o permitido de {{configuracao.maxMB_filesize}}Mb");
+                      this.value = "";
+                    }
+                }
+              </script>
+            {% endif %}
 
             <span class="topico">Áreas/Habilidades envolvidas no projeto</span><br>
             {% if proposta %}
