--- a/propostas/templates/propostas/index_propostas.html
+++ b/propostas/templates/propostas/index_propostas.html
@@ -14,7 +14,7 @@
         <a href="{% url 'propostas_apresentadas' %}"><li>Propostas Apresentadas</li></a>
         <a href="{% url 'publicar_propostas' %}"><li>Publicar Propostas</li></a>
         <a href="{% url 'procura_propostas' %}"><li>Procura pelas Propostas</li></a>
-        <a href="{% url 'mapeamento_estudantes_propostas' %}"><li>Mapeamento Estudantes e Propostas de Projetos</li></a>
+        <a href="{% url 'mapeamento_estudantes_propostas' %}"><li>Mapeamento Estudantes e Propostas</li></a>
         <a href="{% url 'propor' %}"><li>Propor Grupos para Projetos</li></a>
         <a href="{% url 'montar_grupos' %}"><li>Montar Grupos para Projetos</li></a>
         <a href="{% url 'procura_grupos' %}"><li>Grupos Fechados com Procura</li></a>
