--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -29,9 +29,6 @@
       font-size: 12px;
       display: block;
     }
-    body {
-      background-color: #ffffff !important;
-    }
 
     .requiredField {
       border-radius: 2px;
@@ -90,7 +87,7 @@
             <hr>
 
             <label class="topico" for="organizacao">Nome da Instituição/Empresa
-            <small class="obs">sigla e nome comercial/fantasia se houver (não é necessário indicar a Razão Social)</small>
+            <small class="obs">sigla e nome comercial/fantasia (não é necessário indicar a Razão Social)</small>
             </label><br>
             <textarea class="requiredField" id="organizacao" name="organizacao" rows="1" cols="120" maxlength="120" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{ proposta.nome_organizacao }}</textarea>
 
@@ -102,28 +99,28 @@
             <textarea id="endereco" name="endereco" rows="3" cols="120" maxlength="400" {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.endereco}}</textarea>
             
             <label class="topico" for="contatos_tecnicos">Contatos Técnicos<br>  
-            <small class="obs">nome/e-mail/telefone para quem estudantes e professores orientadores irão tratar do desenvolvimento do projeto</small>
+            <small class="obs">nome/e-mail/telefone para que estudantes e orientadores entrem em contato a cerca do desenvolvimento do projeto</small>
             </label><br>
             <textarea id="contatos_tecnicos" class="requiredField" name="contatos_tecnicos" rows="3" cols="120" maxlength="400" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.contatos_tecnicos}}</textarea>
         
             <label class="topico" for="contatos_adm">Contatos Administrativos<br>     
-            <small class="obs">nome/e-mail/telefone, com quem devemos resolver questões contratuais ou RH (opcional)</small>
+            <small class="obs">nome/e-mail/telefone para quem devemos entrar em contato para resolver questões contratuais ou RH (opcional)</small>
             </label><br>
             <textarea id="contatos_adm" name="contatos_adm" rows="3" cols="120" maxlength="400" {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.contatos_administrativos}}</textarea>
 
             <label class="topico" for="descricao_organizacao">Informações sobre a instituição/empresa<br>
-            <small class="obs">descreva a instituição/empresa para estudantes entenderem o que ela faz (opcional)</small>
+            <small class="obs">descreva a instituição/empresa para estudantes conhecerem o que ela faz (opcional)</small>
             </label><br>
             <textarea id="descricao_organizacao" name="descricao_organizacao" rows="8" cols="120" maxlength="3000" {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.descricao_organizacao}}</textarea>
 
             <label class="topico" for="info_departamento">Informações sobre a departamento<br>
-            <small class="obs">descreva o departamento/área para estudantes entenderem o que ele faz (opcional)</small>
+            <small class="obs">descreva o departamento/área para estudantes conhecerem o que ele faz (opcional)</small>
             </label><br>
             <textarea id="info_departamento" name="info_departamento" rows="8" cols="120" maxlength="3000" {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.departamento}}</textarea>
             <hr>
 
             <label class="topico" for="titulo">Título provisório do projeto<br>
-            <small class="obs">um título para ser apresentado aos estudantes</small>
+            <small class="obs">um título para ser apresentado aos estudantes e ao longo do projeto, será possível revisar esse título</small>
             </label><br>
             <input class="requiredField" type="text" size="80" maxlength="160" style="max-width: 100%;" id="titulo" name="titulo" value="{{proposta.titulo}}" required {% if edicao and liberadas_propostas %}disabled{% endif %}>
             <br><br>
@@ -134,7 +131,7 @@
             <textarea id="desc_projeto" class="requiredField" name="desc_projeto" rows="10" cols="120" maxlength="3000" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.descricao}}</textarea>
 
             <label class="topico" for="expectativas">Expectativas de resultados/entregas<br>
-            <small class="obs">exemplo: estudos, validações, relatórios, protótipos, testes</small>
+            <small class="obs">exemplo: protótipos, modelos, ferramentas, estudos, validações, testes, padrões</small>
             </label><br>
             <textarea id="expectativas" class="requiredField" name="expectativas" rows="8" cols="120" maxlength="3000" required {% if edicao and liberadas_propostas %}disabled{% endif %}>{{proposta.expectativas}}</textarea>
 
