propor esta na página de montar grupos

--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -272,16 +272,24 @@
     {% endfor %}
   </small><br>
 
+
   <hr>
   <form action="" method="post"> {% csrf_token %}  
     <input type="submit" class="btn btn-secondary" name="limpar"
            data-toggle="tooltip" data-html="true" animation="true"
            title="Remove todos os movimentos de estudantes já realizadas e coloca todos de volta em suas primeiras opções."
            value="Resetar Pré Alocações" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
+
+    <input type="button" class="btn btn-secondary" id="propor" name="propor"
+           data-toggle="tooltip" data-html="true" animation="true"
+           title="Sistema propõe uma montagem de grupos em função das opções, cursos, CR e interesses."
+           value="Montar Grupos Automaticamente" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
+
     <input type="submit" class="btn btn-secondary" name="fechar" 
            data-toggle="tooltip" data-html="true" animation="true"
            title="Cria efetivamente os projetos na base de dados e avança para a seleção de orientadores."
            value="Fechar Projetos" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
+  
   </form>
 
   <br><br>
@@ -722,6 +730,9 @@
         e.preventDefault();
     }
 
-  </script>
+    </script>
+
+{% comment %} Para o propor grupos automaticamente {% endcomment %}
+{% include "montando_grupos_auto.html" %}
 
 {% endblock %}
